pkgs/ndarray/lib/src/ndarray_bindings.dart


@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cummin_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cummin_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cummin_int64(
  ffi.Pointer<ffi.Int64> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Int64> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cummin_int32(
  ffi.Pointer<ffi.Int32> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Int32> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cummax_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cummax_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cummax_int64(
  ffi.Pointer<ffi.Int64> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Int64> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cummax_int32(
  ffi.Pointer<ffi.Int32> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Int32> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_diff_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_diff_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_diff_int64(
  ffi.Pointer<ffi.Int64> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Int64> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_diff_int32(
  ffi.Pointer<ffi.Int32> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Int32> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_diff_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_diff_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_sin_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_sin_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_cos_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_cos_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_asin_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_asin_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_acos_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_acos_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_atan_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_atan_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_atan2_double(
  ffi.Pointer<ffi.Double> y,
  ffi.Pointer<ffi.Int> stridesY,
  ffi.Pointer<ffi.Double> x,
  ffi.Pointer<ffi.Int> stridesX,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_atan2_float(
  ffi.Pointer<ffi.Float> y,
  ffi.Pointer<ffi.Int> stridesY,
  ffi.Pointer<ffi.Float> x,
  ffi.Pointer<ffi.Int> stridesX,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_tan_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_tan_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);
